# Cetris

./: Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  InfoPanel.cpp  InfoPanel.hpp  LICENSE  Shape.cpp  Shape.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  StepManager.cpp  StepManager.hpp  StopPanel.cpp  StopPanel.hpp  Structs.hpp  main.cpp  readme.md
header/: Board.hpp  Game.hpp  GameProperties.hpp  Helpers.hpp  InfoPanel.hpp  Observable.hpp  Observer.hpp  Shape.hpp  StepManager.hpp  StopPanel.hpp  Structs.hpp  Tetromino.hpp  TetrominoGenerator.hpp
src/: Board.cpp  Game.cpp  GameProperties.cpp  InfoPanel.cpp  Observable.cpp  Shape.cpp  StepManager.cpp  StopPanel.cpp  Tetromino.cpp  TetrominoGenerator.cpp  main.cpp
